# OpenCV-TfLite-Inference-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxygen.in  README.md
data/: .gitignore
examples/: CMakeLists.txt  example_object_detection.cpp  example_segmentation.cpp
include/inference_engine/: inference_engine.hpp
include/logging/: log.hpp
include/utils/: inference_status.hpp  scoped_timer.hpp
include/visualizer/: object_detection.hpp  segmentation.hpp  visualizer_base.hpp
logs/: .gitignore
models/: .gitignore
src/: main.cpp
tests/: CMakeLists.txt  test_inference.cpp  test_object_detection.cpp  test_segmentation.cpp
tflite_inference_engine/infer/: infer.hpp
tflite_inference_engine/log/: glogging.hpp
tflite_inference_engine/utils/: colors.hpp  inference_status.hpp  visualization_status.hpp
tflite_inference_engine/visualizer/: object_detection.hpp  segmentation.hpp  visualizer_base.hpp
